--- a/style.css
+++ b/style.css
@@ -22,142 +22,6 @@ a, mark{
                                                                 /* BASIC SCREENS */
 
 /* MENU TOP PAGE */
-header{
-    position: fixed;
-    top: 0px;
-    height: 6.25rem;
-    width: 100%;
-    background-color: white;
-    box-shadow: 0px -100px 200px;
-}
-    #logo{ /* LOGO */
-        width: 11.43rem;
-        height: 13rem;
-
-        margin-left: 3.5rem;
-        margin-top: 2rem;
-        
-    }
-    #home{ /* HOME NAV ICON */
-        width: 2.4rem;
-        height: 2.4rem;
-
-        margin-left: 18.5rem;
-        margin-top: -13.4rem;
-
-        background: url(svgconception/home.svg) no-repeat;
-
-        transition: ease 0.5s;
-    }
-        #home:hover{
-            background: url(svgconception/homehover.svg) no-repeat;
-        }
-    #navigation{ /* NAV TOP PAGE */
-        display: flex;
-        position: absolute;
-        top: 2.2rem;
-        margin-left: 21.7rem;
-    }
-        .menu{
-            font-size: 1.3rem;
-            font-family: titillium_websemibold;
-            color: #7F3996;
-            text-transform: uppercase;
-
-            margin-left: 3rem;
-
-        }
-            #portfolio::before{
-                content: "";
-                position: absolute;
-                width: 7.8rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-                #portfolio:hover::before{
-                    opacity: 1;
-                }
-            #projet::before{
-                content: "";
-                position: absolute;
-                width: 4.1rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                left: 13.8rem;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-                #projet:hover::before{
-                    opacity: 1;
-                }
-            #contact::before{
-                content: "";
-                position: absolute;
-                width: 9.5rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                left: 20.8rem;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-              #contact:hover::before{
-                  opacity: 1;
-              }
-            #linkedin{
-                position: absolute;
-                right: 5rem;
-                top: 1.7rem;
-            }
-                #linkedinlink{
-                    position: absolute;
-
-                    height: 2.4rem;
-                    width: 2.4rem;
-
-                    background: url(svgconception/linkedin.svg) no-repeat;
-                    background-size: 100%;
-                    
-                    transition: ease 0.5s;
-                }
-                #linkedinlink:hover{
-                    background: url(svgconception/linkedinhover.svg) no-repeat;
-                    background-size: 100%;
-                }
-                #devislink{                    
-                    position: absolute;
-                    right: 8rem;
-                    top: 1.9rem;
-                    padding: 0 1rem 0 1rem;
-                
-                    color: white;
-                    font-size: 1.3rem;
-                    font-family: titillium_websemibold;
-                    border: 0.2rem solid transparent;
-                    border-radius: 0.8rem ;
-                    background: linear-gradient(90deg, rgba(191,150,205,1) 0%, rgba(127,57,150,1) 25%, rgba(191,150,205,1) 50%, rgba(127,57,150,1) 75%, rgba(191,150,205,1) 100%);
-                    background-size: 400% 400%;
-                
-                    animation: smoothgradient 5s ease infinite;
-                    transition: ease 0.5s;
-                }
-                    #devislink:hover{
-                        
-                        color: #7F3996;
-                        border: 0.2rem solid #7F3996;
-                        background: white;
-                    }
-                      
 
     /* END NAV TOP PAGE */
 /* END MENU TOP PAGE */
@@ -182,7 +46,6 @@ header{
         background-position: 150% 50%;
 
         padding-top: 12%;
-        /* box-shadow: 0px 17px 34px #9f3996; */
     }
 
     #compétences{
@@ -226,16 +89,14 @@ header{
 
         width: 100%;
 
-        margin: 10vh 0 10vh 0;
+        margin: 5vh 0 10vh 0;
         padding: 0 15vw 0 15vw;
     }
         #selfdescription div{
             width: 20vw;
             min-width: 30rem;
             font-size: 1.2rem;
-        }
-        #selfdescription div ~ div{
-            background-color: blue;
+            margin-top: 5vh;
         }
             	#selfdescription div h3, #selfdescription div h3 a{
                     font-size: 1.5rem;
@@ -255,7 +116,7 @@ header{
         justify-content: center;
         align-items: center;
 
-        height: 11vh;
+        height: 12vh;
 
         background-image: url(svgconception/secondbaselinebanner.svg);
         background-repeat: no-repeat;
@@ -309,7 +170,7 @@ header{
                 font-family: titillium_websemibold;
             }
     .soft_title{
-        color: #f7dfff;
+        color: white;
     }
     .soft{
         background-color: #7f3996;
@@ -317,7 +178,7 @@ header{
     }
         .soft div{
             background-color: #A766BC;
-            color: #f7dfff;
+            color: white;
         }
         .soft div:nth-child(odd){
             background-color: white;
@@ -331,7 +192,7 @@ header{
 
 /* END WEB CONTENT */
                                                                 /* LAPTOP and Large Tablet ADJUST */
-@media screen and (min-width: 990px) and (max-width: 1249px){
+@media screen and (min-width: 1001px) and (max-width: 1249px){
     #banner{
         margin-top: 4rem;
         padding-top: 20vh;
@@ -355,336 +216,15 @@ header{
 #navigation_phone{
   visibility: hidden;
 }
-
-                                                                /* TABLET SCREENS */
-@media screen and (min-width: 641px) and (max-width: 989px){
-    /* MENU TOP PAGE */
-    header{
-        position: fixed;
-        height: 4.0625rem;
-        margin-bottom: 4.0625rem;
-    }
-        /* WEBSITE LOGO */
-        #logo{
-        width: 5rem;
-        height: 5.68rem;
-
-        margin-left: 2rem;
-        margin-top: 1rem;
-        }
-        /* MENU NAV ICON */
-        #home{
-            width: 2rem;
-            height: 2rem;
-            margin: 0;
-            position: absolute;
-            top: 1rem;
-            left: 8.5rem;
-        }
-        #navigation{
-            width: 1.5rem;
-            height: 1.5rem;
-            right: 1.5rem;
-            top: 1.3rem;
-            visibility: visible;
-            overflow: hidden;
-
-            transition: ease 0.5s;
-        }
-            #navigation:hover{
-                
-            display: flex;
-            flex-direction: column;
-            
-            padding-top: 4rem;
-                top: 0rem;
-                right: 0rem;
-                height: 100rem;
-                width: 15rem;
-
-                border-radius: 0px;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  -5px 5px 10px #d6d6d6,
-                             5px -5px 10px #ffffff;
-            }
-            
-            #navigation_phone{
-                position: absolute;
-                visibility: visible;
-                top: 0rem;
-                
-                height: 1.5rem;
-                width: 1.5rem;
-                background: url(svgconception/hamburger.svg) no-repeat;
-
-                transition: ease 0.5s;
-            }
-                #navigation:hover #navigation_phone{
-                    top: 1.5rem;
-                    left: 1.5rem;
-                    transform: rotate(180deg);
-                    background: url(svgconception/hamburgerhover.svg) no-repeat;
-                    }
-            .menu{
-                opacity: 0;
-                transition-delay: 0.5s;
-                transition: ease 1s;
-                margin-top: 2rem;
-            }
-                #navigation:hover .menu{
-                    opacity: 1;
-                }
-                #portfolio:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-                #projet:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-                #contact:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-
-        #linkedin{
-            visibility: visible;
-            right: 5rem;
-            top: 1.25rem;
-
-            height: 1.5rem;
-            width: 1.5rem;
-        }
-            #linkedinlink{
-                height: 1.5rem;
-                width: 1.5rem;
-            }
-            #devislink{
-                visibility: hidden;
-            }
-        /* NAV FOR PHONE MEDIA */
-
-    /* END MENU TOP PAGE */
-    /* CONTENT */
-    #banner{
-        margin-top: 4.0625rem;
-        width: 100%;
-
-        font-size: 1.8rem;
-        top: 62px;
-        visibility: visible;
-        padding: 15%;
-
-        background: url(media/bannerphone.jpg) no-repeat;
-        background-size: 100%;
-    }
-    #compétences{
-        margin: 3vh 0 10vh 0;
-    }
-    #baseline{
-        font-size: 2rem;
-    }
-    #selfdescription div{
-        width: 30rem;
-        margin: 5vh;
-    }
-
-}
-                                                                /* END TABLET SCREENS */         
-                                                                /* PHONE SCREENS */                                                       /* PHONE SCREENS */
-@media screen and (min-width: 0px) and (max-width: 640px){
-    /* MENU TOP PAGE */
-    header{
-        position: fixed;
-        height: 4rem;
-        width: 100%;
-        margin-bottom: 4.0625rem;
-    }
-        /* WEBSITE LOGO */
-        #logo{
-        width: 5rem;
-        
-        margin: -2.5rem 0 0 2rem;
-        }
-        /* MENU NAV ICON */
-        #home{
-            width: 1.5rem;
-            height: 1.5rem;
-            margin: 0;
-            position: absolute;
-            top: 1.25rem;
-            left: 8.5rem;
-        }
-        #navigation{
-            width: 1.5rem;
-            height: 1.5rem;
-            right: 1.5rem;
-            top: 1.3rem;
-            visibility: visible;
-            overflow: hidden;
-
-            transition: ease 0.5s;
-        }
-            #navigation:hover{
-                
-            display: flex;
-            flex-direction: column;
-            
-            padding-top: 4rem;
-                top: 0rem;
-                right: 0rem;
-                height: 100rem;
-                width: 15rem;
-
-                border-radius: 0px;
-                border-radius: 0px;
-                background: #ffffff;
-                box-shadow:  -5px 5px 10px #d6d6d6,
-                             5px -5px 10px #ffffff;
-            }
-            
-            #navigation_phone{
-                position: absolute;
-                visibility: visible;
-                
-                height: 1.5rem;
-                width: 1.5rem;
-                background: url(svgconception/hamburger.svg) no-repeat;
-
-                transition: ease 0.5s;
-            }
-                #navigation:hover #navigation_phone{
-                    top: 1.5rem;
-                    left: 1.5rem;
-                    transform: rotate(180deg);
-                    background: url(svgconception/hamburgerhover.svg) no-repeat;
-                    }
-            .menu{
-                opacity: 0;
-                transition-delay: 0.5s;
-                transition: ease 1s;
-                margin-top: 2rem;
-                
-            }
-                #navigation:hover .menu{
-                    opacity: 1;
-                }
-                #portfolio:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-                #projet:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-                #contact:hover::before{
-                    visibility: hidden;
-                    opacity: 0;
-                }
-
-        #linkedin{
-            top: 1.2rem;
-            right: 6rem;
-        }
-            #linkedinlink{
-                visibility: visible;
-                height: 1.5rem;
-                width: 1.5rem;
-            }
-            #devislink{
-                visibility: hidden;
-            }
-        /* NAV FOR PHONE MEDIA */
-
-    /* END MENU TOP PAGE */
-    /* CONTENT */
-    #banner{
-        margin-top: 4rem;
-        font-size: 1.5rem;
-        visibility: visible;
-        padding-top: 16%;
-
-        width: 100%;
-        height: 40vh;
-        background: url(media/bannerwallpaper2phone.jpg) no-repeat;
-        background-size: 100%;
-        background-position: 100% 50%;
-        padding-top: 12vh;
-    }
-        #banner_span{  
-        }
-
-    #compétences{
-        display: inline-flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin: 5vh 0 10vh 0;
-    }
-        .compétences_block{
-            align-self: center;
-            display: inline-flex;
-            flex-direction: column;
-            width: 100%;
-        }
-            .compétences_text{
-                clear: right;
-                text-align: center;
-                width: auto;
-            }
-            .compétences_img{
-                clear: left;
-                height: 10rem;
-                width: 10rem;
-                align-self: center;
-            }
-    #baseline{
-        display: block;
-        font-size: 1rem;
-    }
-    #selfdescription{
-        display: none;
-    }
-
-
-
-
-
-}
-                                                                /* END PHONE SCREENS */
-
                                                                 /* ULTRA-WIDE AND 4K SCREENS */
 @media screen and (min-width: 1921px) and (max-width: 6000px){
     #banner{
         height: 62.5rem;
     }
 }
-/* END ULTRA-WIDE AND 4K SCREENS */
+                                                                /* END ULTRA-WIDE AND 4K SCREENS */
 
-/* END MEDIA QUERIES */
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                                                /* END MEDIA QUERIES */
     @font-face {
  
         font-family: 'titillium_webblack';
