--- a/mobile.css
+++ b/mobile.css
@@ -1,30 +1,38 @@
 @media screen and (min-width: 641px) and (max-width: 1000px){
-    /* MENU TOP PAGE */
-    /* NAV FOR PHONE MEDIA */
-
-    /* END MENU TOP PAGE */
     /* CONTENT */
     #banner{
         margin-top: 4.0625rem;
+
+        height: 45vh;
         width: 100%;
 
         font-size: 1.8rem;
-        top: 62px;
-        visibility: visible;
-        padding: 15%;
+        background-image: url(media/bannerwallpapertry2.jpg);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; 
+    }
 
-        background: url(media/bannerphone.jpg) no-repeat;
-        background-size: 100%;
+    #selfdescription ~ a{
+        padding: 1vh 2vw;
     }
     #compétences{
         margin: 3vh 0 3vh 0;
     }
+        .compétences div{
+            font-size: 1.2rem;
+            height: 22rem;     
+        }
     #baseline{
         font-size: 2rem;
     }
     #selfdescription div{
         width: 30rem;
         margin: 5vh;
+    }
+    footer{
+        font-size: 1rem;
     }
 
 }
@@ -36,48 +44,107 @@
     /* CONTENT */
     #banner{
         margin-top: 4rem;
-        font-size: 1.5rem;
-        visibility: visible;
-        padding-top: 16%;
 
         width: 100%;
         height: 40vh;
-        background: url(media/bannerwallpaper2phone.jpg) no-repeat;
-        background-size: 100%;
-        background-position: 100% 50%;
-        padding-top: 12vh;
+
+        font-size: 1.5rem;
+        background-image: url(media/bannerwallpapertry2.jpg);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; 
     }
-        #banner_span{
+    .compétences_block{
+        padding: 0 10vw 0 10vw;
+    }
+        #selfdescription div{
+            margin-top: 0;
+ 
+            width: 50vw;
+            min-width: 15rem;
+
+            font-size: 1rem;           
         }
+            #selfdescription div h3, #selfdescription div h3 a{
+                font-size: 1.2rem;
+            }
+            #selfdescription div ~ div{
+                margin-top: 5vh;
+            }
+        #selfdescription ~ a{
+            padding: 1vh 3vw;
+        }
+    #secondbaseline{
+
+        height: 18vh;
+
+        font-size: 1.2rem;
+        background-size: 250%;
+        background-position: 50% 50%;    
+    }
+        
 
     #compétences{
         display: inline-flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: center;
+        align-items: center;
         margin: 5vh 0 10vh 0;
+
+        width: 100vw;
     }
+
+        .compétences_title{
+            font-size: 2rem;
+        }
+        .soft_title{
+            margin: 0;
+        }
         .compétences_block{
             align-self: center;
-            display: inline-flex;
             flex-direction: column;
-            width: 100%;
+
+            width: 75vw;
         }
+            .compétences div{
+                height: 20rem;
+
+                padding: 2rem 2rem;
+                font-size: 1rem;
+            }
             .compétences_text{
                 clear: right;
                 text-align: center;
+
+                font-size: 1.1em;
+
                 width: auto;
             }
             .compétences_img{
-                clear: left;
-                height: 10rem;
-                width: 10rem;
                 align-self: center;
+                clear: left;
+
+                height: 8rem;
+                width: 8rem;              
             }
     #baseline{
         display: block;
-        font-size: 1rem;
+
+        padding: 10vh 10vw;
+        justify-content: flex-start;
+        align-items: center;
+        
+        font-size: 1.5rem;
     }
-    #selfdescription{
-        display: none;
+    
+    footer{
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1vh 20vw 1vh 20vw;
+
+        height: 50vh;
+        
+        font-size: 1rem;
     }
 }
