--- a/style.css
+++ b/style.css
@@ -1,115 +1,128 @@
-                                                                /** GENERAL WEBSITE SETTINGS **/
-*{
-	-moz-box-sizing: border-box; box-sizing: border-box;
-	margin: 0px;
-	padding: 0px;
-}
+/** GENERAL WEBSITE PROPERTIES **/
 
-body{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+/** END GENERAL WEBSITE PROPERTIES **/
 
-    font-family: titillium_webregular;
-}
-
-a, mark{
-	color: black;
-	text-decoration: none;
-    background-color: transparent;
-}
-
-                                                                /** END GENERAL WEBSITE SETTINGS **/
-                                                                /* BASIC SCREENS */
-
-/* MENU TOP PAGE */
-
-    /* END NAV TOP PAGE */
-/* END MENU TOP PAGE */
 /* WEB CONTENT */
-    #auto{
-        width: auto;
-    }
+main{
+    display: flex;
+    flex-direction: column;
+}
     #banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-top: 6.25rem ;
+        padding: 0vh 5vw 0 5vw;
+
+        width: 100%;
+        height: 50.5vh;
 
         font-size: 3rem;
         font-family: titillium_websemibold;
         text-align: center;
         color: white;
-
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        width: 100%;
-        height: 50.5vh;
         background-size: 100%;
-        background-image: url(media/bannerwallpaper2.jpg);
+        background-image: url(media/bannerwallpapertry2.jpg);
+        background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position: 150% 50%;
-
-        padding-top: 12%;
+        background-size: cover;
+        background-position: center; 
     }
-
     #compétences{
-        font-size: 1.3rem;
         margin: 10vh 0 10vh 0;
 
         text-align: center;
+        font-size: 1.3rem;       
     }
         .compétences_block{
             display: inline-flex;
+
             margin: 5vh 3vw;
         }
             .compétences_text{
                 float: right;
-                color: #333333;
+
                 width: 16rem;
+
                 text-align: left;
+                color: #333333;                
             }
             .compétences_img{
-                float: left;
                 display: inline-flex;
-                height: 12rem;
+                float: left;
+                
+                height: 10rem;
             }
     #baseline{
-        width: 100%;
-        height: 100vh;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 8rem;
 
-        padding-top: 8rem;
-        padding-left: 8rem;
+        width: 100%;
+        height: 60vh;
+
+        
         font-size: 3rem;
         font-family: titillium_websemibold;
         color: white;
-        background-color: #161616;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
+        background: linear-gradient(360deg, rgba(225,75,156,1) 0%, rgba(47,34,172,1) 100%);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 
     #selfdescription{
         display: inline-flex;
         justify-content: space-around;
         flex-wrap: wrap;
-
-        width: 100%;
-
         margin: 5vh 0 5vh 0;
         padding: 0 15vw 0 15vw;
+
+        width: 100%;        
     }
         #selfdescription div{
+            padding: 3vh 0 3vh 0;
+
             width: 20vw;
             min-width: 30rem;
-            font-size: 1.2rem;
-            margin-top: 5vh;
+
+            font-size: 1.2rem;        
         }
             	#selfdescription div h3, #selfdescription div h3 a{
-                    font-size: 1.5rem;
-                    color: #7f3996;
                     margin-bottom: 2vh;
+
+                    font-size: 1.5rem;
+                    color: #7f3996;                    
                 }
                 #selfdescription div strong, #selfdescription div mark{
-                    color: #7f3996;
                     font-family: titillium_websemibold;
+                    color: #7f3996;                    
                 }
                 #selfdescription div mark{
                     font-style: bold;
                 }
+    #selfdescription ~ a {
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 8vh;
+        padding: 1vh 1vw;
+
+        color: #7f3996;
+        font-size: 1.3rem;
+        font-family: titillium_websemibold;
+        border: 0.2rem solid #7f3996;
+        border-radius: 10rem;
+    }
+        #selfdescription ~ a:hover{
+            background-color: #7f3996;
+            color: white;
+            transition: ease 0.5s;
+        }
     #secondbaseline{
         display: flex;
         flex-wrap: wrap;
@@ -118,231 +131,118 @@ a, mark{
 
         height: 12vh;
 
-        background-image: url(svgconception/secondbaselinebanner.svg);
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: 0 50%;
-
         text-align: center;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-size: 1.5rem;
         color: white;
+        background-color: #363636;
     }
-    .compétences_title{
-        margin: 8vh 0vh 0vh 0vh;
-        text-align: center;
-
-        font-family: titillium_webbold;
-        font-size: 3rem;
-        color: #A766BC;
-    }
-    .compétences{
-        margin: -10vh 0 0 0;
-        padding: 10vh 10vw 10vh 10vw;
+    
+    .compétences{        
         display: flex;
         flex-wrap: wrap;
-        flex: 100%;
         justify-content: space-around;
-        text-align: center;
+        padding: 0vh 10vw 10vh 10vw;
 
         width: 100%;
+
+        text-align: center;
     }
+        .compétences_title{
+            margin: 8vh 0vh 0vh 0vh;
+            
+            font-family: titillium_webbold;
+            font-size: 3rem;
+            color: #A766BC;
+            text-align: center;
+
+
+        }
         .compétences div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             padding: 3vh 3vh 3vh 3vh;
             margin: 10vh 0 0 0;
 
             width: 24vw;
             min-width: 20rem;
-            background-color: #7f3996;
-            color: white;
+
+            height: 26rem;
 
             font-size: 1.4rem;
+            color: white;
+            background-color: #7f3996;            
         }
         .compétences div:nth-child(even){
             background-color: #A766BC;
         }
             .compétences div h3{
-                text-transform: uppercase;
                 margin-bottom: 2vh;
 
+                text-transform: uppercase;
             }
             .compétences div p{
                 font-family: titillium_websemibold;
-            }
+            }    
+    .soft{
+        padding-top: 8vh;
+
+        background-image: url(media/triangle.jpg);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
     .soft_title{
         color: white;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
     }
-    .soft{
-        background-color: #7f3996;
-
+    .soft .soft_title{
+        margin: 0;
     }
         .soft div{
-            background-color: #A766BC;
-            color: white;
-        }
-        .soft div:nth-child(odd){
-            background-color: white;
             color: #7f3996;
+            background-color: rgba(255, 255, 255, 0.7);
+            
         }
-    footer{
-        width: 100vw;
-        height: 30vh;
-        background-color: #161616;
-    }
+        .soft div:nth-child(even){
+            color: #7f3996;
+            background-color: rgba(255, 255, 255, 0.7);       
+        }
+    
 
 /* END WEB CONTENT */
-                                                                /* LAPTOP and Large Tablet ADJUST */
+/* LAPTOP and Large Tablet ADJUST */
 @media screen and (min-width: 1001px) and (max-width: 1249px){
+    #devislink{
+        display: none;
+    }
     #banner{
         margin-top: 4rem;
-        padding-top: 20vh;
-
-        background-image: url(media/bannerwallpaper2phone.jpg);
-        background-size: 100%;
-        background-position: 100% 70%;
+    }   
+    #baseline{
+        font-size: 2.4rem;
+    } 
+    #compétencestechniques div{
+        font-size: 1rem;
     }
-    #banner_span{
-        font-size: 4rem;
+    #navigation_phone{
+        visibility: hidden;
     }
-                #devislink{
-                    display: none;
-                }
-        #compétencestechniques div{
-            font-size: 1rem;
-        }
+    .compétences div{
+        font-size: 1.2rem;
+        height: 25rem;
+    }
 }
-                                                                /* END BASIC SCREENS */
-                                                                /* MEDIA QUERIES */
-#navigation_phone{
-  visibility: hidden;
-}
-                                                                /* ULTRA-WIDE AND 4K SCREENS */
+/* ULTRA-WIDE AND 4K SCREENS */
 @media screen and (min-width: 1921px) and (max-width: 6000px){
     #banner{
         height: 62.5rem;
     }
 }
-                                                                /* END ULTRA-WIDE AND 4K SCREENS */
-
-                                                                /* END MEDIA QUERIES */
-    @font-face {
-
-        font-family: 'titillium_webblack';
-        src: url('font/titilliumweb-black-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-black-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_webbold';
-        src: url('font/titilliumweb-bold-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-bold-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-
-        font-family: 'titillium_webbold_italic';
-        src: url('font/titilliumweb-bolditalic-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-bolditalic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_webextralight';
-        src: url('font/titilliumweb-extralight-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-extralight-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-
-        font-family: 'titillium_webXLtIt';
-        src: url('font/titilliumweb-extralightitalic-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-extralightitalic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_webitalic';
-        src: url('font/titilliumweb-italic-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-italic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-
-        font-family: 'titillium_weblight';
-        src: url('font/titilliumweb-light-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-light-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_weblight_italic';
-        src: url('font/titilliumweb-lightitalic-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-lightitalic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_webregular';
-        src: url('font/titilliumweb-regular-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-regular-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-
-        font-family: 'titillium_websemibold';
-        src: url('font/titilliumweb-semibold-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-semibold-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'titillium_websemibold_italic';
-        src: url('font/titilliumweb-semibolditalic-webfont.woff2') format('woff2'),
-             url('font/titilliumweb-semibolditalic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'arvobold';
-        src: url('arvo-bold-webfont.woff2') format('woff2'),
-             url('arvo-bold-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-
-    }
-    @font-face {
-        font-family: 'arvobold_italic';
-        src: url('arvo-bolditalic-webfont.woff2') format('woff2'),
-             url('arvo-bolditalic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-
-    }
-    @font-face {
-        font-family: 'arvoitalic';
-        src: url('arvo-italic-webfont.woff2') format('woff2'),
-             url('arvo-italic-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-
-    @font-face {
-        font-family: 'arvoregular';
-        src: url('arvo-regular-webfont.woff2') format('woff2'),
-             url('arvo-regular-webfont.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-
-    }
-
-    @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
-/** test **/
-
+/* ANIMATION KEYFRAMES */
 @keyframes smoothgradient{
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
