--- a/css js/style.css
+++ b/css js/style.css
@@ -216,14 +216,13 @@ main{
 /* END WEB CONTENT */
 /* LAPTOP and Large Tablet ADJUST */
 @media screen and (min-width: 1001px) and (max-width: 1249px){
-    #devislink{
-        display: none;
-    }
     #banner{
         margin-top: 4rem;
+        font-size: 2.6rem
     }   
     #baseline{
-        font-size: 2.4rem;
+        font-size: 2.3rem;
+        height: 30rem;
     } 
     #compétencestechniques div{
         font-size: 1rem;
