--- a/css js/style.css
+++ b/css js/style.css
@@ -215,8 +215,9 @@ main{
 
 /* END WEB CONTENT */
 /* LAPTOP and Large Tablet ADJUST */
-@media screen and (min-width: 1001px) and (max-width: 1249px){
+@media screen and (min-width: 1001px) and (max-width: 1500px){
     #banner{
+        height: 30rem;
         margin-top: 4rem;
         font-size: 2.6rem
     }   
