--- a/css js/headerfooter.css
+++ b/css js/headerfooter.css
@@ -23,7 +23,7 @@ header{
     height: 6.25rem;
     width: 100%;
     background-color: white;
-    box-shadow: 0px -0.1px 30px #d6d6d6;
+    box-shadow: 0px -100px 200px;
 
     z-index: 100;
 }
@@ -461,4 +461,10 @@ header{
             
         font-size: 1rem;
     }        
+}
+
+@keyframes smoothgradient{
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
