--- a/css js/party.css
+++ b/css js/party.css
@@ -49,7 +49,6 @@ article#article1 div{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
 }
 article#article1 div div{
     justify-content: flex-start;
@@ -164,6 +163,10 @@ article#article1 div div p{
         text-align: center;
         margin-left: 0;
     }
+    #formlink{
+        padding: 0 10vw;
+        margin-bottom: 10vh;
+    }
 }
 
 @media screen and (min-width: 0px) and (max-width: 640px){
@@ -231,6 +234,10 @@ article#article1 div div p{
     article#article1 div div p{
         text-align: center;
         margin-left: 0;
+    }
+    #formlink{
+        padding: 0 10vw;
+        margin-bottom: 10vh;
     }
 }
 
