--- a/css js/headerfooter.css
+++ b/css js/headerfooter.css
@@ -82,53 +82,6 @@ header{
             .menu:hover{
                 color: #440d57;
             }
-            /* #portfolio::before{
-                content: "";
-                position: absolute;
-                width: 7.8rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-                #portfolio:hover::before{
-                    opacity: 1;
-                }
-            #projet::before{
-                content: "";
-                position: absolute;
-                width: 4.1rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                left: 13.8rem;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-                #projet:hover::before{
-                    opacity: 1;
-                }
-            #contact::before{
-                content: "";
-                position: absolute;
-                width: 9.5rem;
-                height: 0.15rem;
-                top: 2rem;
-                bottom: 0;
-                left: 20.8rem;
-                background-color: #7F3996;
-                opacity: 0;
-
-                transition: opacity ease 0.5s;
-            }
-              #contact:hover::before{
-                  opacity: 1;
-              } */
             #linkedin{
                 position: absolute;
                 right: 5rem;
@@ -171,6 +124,12 @@ header{
                         border: 0.2rem solid #7F3996;
                         background: white;
                     }
+        .nav_on{
+            border-bottom: 2px solid rgba(127,57,150,1);
+        }
+
+
+        
     footer{
         display: flex;
         flex-direction: row;
@@ -468,3 +427,4 @@ header{
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
