--- a/css js/portfolio.css
+++ b/css js/portfolio.css
@@ -141,12 +141,67 @@ main article{
                 opacity: 1;
             }
 
+.pop_up{
+    display: none;
+}
+#portfolio_block{
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 200;
+}
 
-/* @media screen adn (min-width: 1250px){
-    article section a:hover div{
-        t
-    }
-}             */
+#portfolio_block div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45vw;
+    background-color: white;
+    border-radius: 1rem;
+    padding: 5vh 5vh 5vh 5vh;
+    -webkit-animation: bounce-in-top 1.1s both;
+	        animation: bounce-in-top 1.1s both;
+}
+#portfolio_block div h5{
+    font-size: 2rem;
+    font-family: Montserrat;
+    text-align: center;
+    font-weight: 600;
+    color: #7f3996;
+}
+#portfolio_block div p{
+    font-size: 1.3rem;
+    font-family: Montserrat;
+    font-weight: 300;
+    margin: 5vh 0 3vh 0;
+}
+#portfolio_block div ol{
+    list-style-type: none;
+}
+#portfolio_block div ol li{
+    font-size: 1.1rem;
+    margin: 2vh 0 2vh 0;
+}
+#portfolio_block div button{
+    border: 0;
+    font-size: 1.2rem;
+    padding: 1vh 2vw 1vh 2vw;
+    background-color: #7f3996;
+    color: white;
+}
+#portfolio_block div button:hover{
+    transition: ease 0.5s;
+    color: #7f3996;
+    background-color: white;
+    -webkit-animation: button-shadow-pop-bottom 0.6s both;
+	        animation: button-shadow-pop-bottom 0.6s both;
+}
 @media screen and (min-width: 1001px) and (max-width: 1249px){
     main article div h2{
         font-size:3.5rem;
@@ -220,6 +275,9 @@ main article{
             margin-top: 2vh;
             text-shadow: 0px 1px 10px rgb(0, 0, 0);
         }
+    #portfolio_block div{
+        width: 90%;
+    }
 }
 
 @media screen and (min-width: 0px) and (max-width: 640px){
@@ -267,7 +325,6 @@ main article{
             }
             #party{
                 background-image: url(media/partyhover.jpg);
-
             }
             #bd{
                 background-image: url(media/bdhover.jpg);
@@ -299,6 +356,15 @@ main article{
             margin-top: 2vh;
             text-shadow: 0px 1px 10px rgb(0, 0, 0);
         }
+        #portfolio_block div button{
+            margin-top: 3vh;
+        }
+        #portfolio_block div{
+            width: 90%;
+            height: 80vh;
+            justify-content: flex-start;
+            overflow: scroll;
+        }
 }
 
 
@@ -313,3 +379,133 @@ main article{
 		transform: translatey(0px);
 	}
 }
+
+@-webkit-keyframes button-shadow-pop-bottom {
+ 0% {
+   box-shadow: 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996;
+   -webkit-transform: translateY(0);
+           transform: translateY(0);
+ }
+ 100% {
+   box-shadow: 0 1px #7f3996, 0 2px #7f3996, 0 3px #7f3996, 0 4px #7f3996, 0 5px #7f3996, 0 6px #7f3996, 0 7px #7f3996, 0 8px #7f3996;
+   -webkit-transform: translateY(-8px);
+           transform: translateY(-8px);
+ }
+}
+@keyframes button-shadow-pop-bottom {
+ 0% {
+   box-shadow: 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996, 0 0 #7f3996;
+   -webkit-transform: translateY(0);
+           transform: translateY(0);
+ }
+ 100% {
+   box-shadow: 0 1px #7f3996, 0 2px #7f3996, 0 3px #7f3996, 0 4px #7f3996, 0 5px #7f3996, 0 6px #7f3996, 0 7px #7f3996, 0 8px #7f3996;
+   -webkit-transform: translateY(-8px);
+           transform: translateY(-8px);
+ }
+}
+
+@-webkit-keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-500px);
+              transform: translateY(-500px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
+  @keyframes bounce-in-top {
+    0% {
+      -webkit-transform: translateY(-500px);
+              transform: translateY(-500px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 0;
+    }
+    38% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+    55% {
+      -webkit-transform: translateY(-65px);
+              transform: translateY(-65px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    72% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    81% {
+      -webkit-transform: translateY(-28px);
+              transform: translateY(-28px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    90% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    95% {
+      -webkit-transform: translateY(-8px);
+              transform: translateY(-8px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+  }
