--- a/css js/contact.css
+++ b/css js/contact.css
@@ -29,7 +29,7 @@ form{
 }
 #contact-title h3{
     font-size: 1rem;
-    color: #424242;
+    color: #ffffff;
     margin-left: 0.5rem;
 }
 
@@ -42,26 +42,26 @@ form{
     padding: 4vh 0 4vh 0;
     /* box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.24); */
 }
-#contact-form h2{
+#contact_form h2{
     font-size: 0.8rem;
     text-transform: uppercase;
 }
-#contact-title h3{
+#contact_title h3{
     color: white;
 }
-#contact-form h3{
+#contact_form h3{
     margin-top: 5vh;
     text-transform: uppercase;
     font-size: 0.8rem;
 }
-#contact-form div{
+#contact_form div{
     margin: 4vh 4vh 0 4vh;
 }
-#contact-form h2,#contact-form h3{
+#contact_form h2,#contact_form h3{
     margin-left: 4vh;
     margin-right: 4vh;
 }
-#contact-form div input{
+#contact_form div input{
     font-family: Montserrat;
     border: 0px;
     border-bottom: 1px solid #7f3996;
@@ -70,10 +70,10 @@ form{
     height: 2.5rem;
     font-size: 1rem;
 }
-#contact-form div input::placeholder{
+#contact_form div input::placeholder{
     font-size: 1rem;
 }
-#contact-form #contact-submit-div{
+#contact_form #contact-submit-div{
     width: 20%;
     display: flex;
     justify-content: center;
@@ -81,29 +81,80 @@ form{
     margin-top: 5vh;
     margin-left: auto;
     margin-right: 0;
+    background-color: red;
 }
-#contact-form input[type="submit"]{
+#contact_form input[type="submit"]{
     padding: 0 0 0 0;
     border: 0px;
     margin-left: auto;
     transform: scale(1.3);
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
 }
-#contact-form input[type="submit"]:hover{
+#contact_form input[type="submit"]:hover{
     background-color: #7f3996;
     color: white;
     transition: 0.5s ease;
     cursor: pointer;
 }
 
-
-@media screen and (min-width: 641px) and (max-width: 1000px){
+.error_message{
+    display: none;
+    font-size: 0.8rem;
+    color: rgb(175, 15, 15);
+}
+@media screen and (min-width: 1001px) and (max-width: 1249px){
     main{
+        flex-direction: column;
         margin-top: 4.0625rem;
     }
+    #contact-div{
+        margin-left: 0;
+        margin-top: 10vh;
+        width: 50vw;
+    }
+    #contact-title{
+        align-self: center;
+    }
+}
+@media screen and (min-width: 641px) and (max-width: 1000px){
+    main{
+        flex-direction: column;
+        margin-top: 4.0625rem;
+    }
+    #contact-div{
+        margin-left: 0;
+        margin-top: 10vh;
+        width: 70vw;
+    }
+    #contact-title{
+        align-self: center;
+    }
+
 }
 @media screen and (min-width: 0px) and (max-width: 640px){
     main{
+        flex-direction: column;
         margin-top: 4.0625rem;
+    }
+    #contact-title h1{
+        font-size: 3rem;
+        padding: 0 5vw 0 5vw;
+    }
+    #contact-title h3{
+        font-size: 1rem;
+        padding: 0 5vw 0 5vw;
+        margin-left: 0;
+    }
+    #contact-div{
+        margin-left: 0;
+        margin-top: 10vh;
+        width: 90vw;
+    }
+    #contact-title{
+        align-self: center;
+    }
+    #contact_form #contact-submit-div {
+        margin: 5vh auto 0 auto;
+        width: 40vw;
     }
 }
